Colums width adjusted and fixed so that to long usernames do not break the layout/structure of the table.

--- a/src/component/storage/fileOverview/fileOverview.sass
+++ b/src/component/storage/fileOverview/fileOverview.sass
@@ -84,7 +84,7 @@
     border-left: 1px solid var(--neutralSecondary)
 
 .name
-    flex: 1 1 80%
+    flex: 1 1 100%
     .name-text-content-container
         max-width: 60dvw
         overflow: hidden
@@ -120,7 +120,7 @@
         &:hover
             animation: 0.2s linear 0s forwards hover-bg-color-shift
     .name
-        flex: 0 1 50%
+        flex: 1 1 50%
         // styles for optionsDropdown.sass
         #file-options-favorite-container:not(:has(.is_favorite))
             display: none
@@ -131,7 +131,7 @@
             max-width: 35dvw
     .size
         display: flex
-        flex: 1 0 10%
+        width: 15%
     .created
         display: flex
-        flex: 1 0 20%
+        width: 25%
